Began to create and implement the base logic for the cards. Started to implement the Farfetch'd card as an example for the other basic Pokemon cards. Need to address 2 bugs:
1. Stack overflow exception (expected to be caused by recursive draw hand calls)
2. Need to get the blinking deck logic for player drawing card working (expected to be caused by state machine not being changed in the right place)

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,7 +46,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Card.cs" />
      <Compile Include="Assets\Scripts\CardGame.cs" />
+     <Compile Include="Assets\Scripts\EnergyCard.cs" />
+     <Compile Include="Assets\Scripts\Farfetchd.cs" />
+     <Compile Include="Assets\Scripts\MonsterCard.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Users/Rob/Desktop/Unity5.5/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
